--- a/assets/css/cbox.css
+++ b/assets/css/cbox.css
@@ -265,7 +265,6 @@ span.activity {
 	padding-top: 5px;
 }
 #item-body form#whats-new-form {
-	margin-top: -20px;
 	padding-bottom: 10px;
 	padding-top: 30px;
 }
